--- a/04_TransportProblem.ipynb
+++ b/04_TransportProblem.ipynb
@@ -85,12 +85,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import of the pyomo module\n",
+    "from pyomo.environ import *\n",
+    " \n",
+    "# Creation of a Concrete Model\n",
+    "model = ConcreteModel()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +118,9 @@
     "## Define sets ##\n",
     "#  Sets\n",
     "#       i   canning plants   / seattle, san-diego /\n",
-    "#       j   markets          / new-york, chicago, topeka / ;"
+    "#       j   markets          / new-york, chicago, topeka / ;\n",
+    "model.i = Set(initialize=['seattle','san-diego'], doc='Canning plans')\n",
+    "model.j = Set(initialize=['new-york','chicago', 'topeka'], doc='Markets')"
    ]
   },
   {
@@ -126,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,16 +149,23 @@
     "#         /    new-york    325\n",
     "#              chicago     300\n",
     "#              topeka      275  / ;\n",
-    "\n",
-    "\n",
+    "model.a = Param(model.i, initialize={'seattle':350,'san-diego':600}, doc='Capacity of plant i in cases')\n",
+    "model.b = Param(model.j, initialize={'new-york':325,'chicago':300,'topeka':275}, doc='Demand at market j in cases')\n",
     "#  Table d(i,j)  distance in thousands of miles\n",
     "#                    new-york       chicago      topeka\n",
     "#      seattle          2.5           1.7          1.8\n",
     "#      san-diego        2.5           1.8          1.4  ;\n",
-    "\n",
-    "\n",
+    "dtab = {\n",
+    "    ('seattle',  'new-york') : 2.5,\n",
+    "    ('seattle',  'chicago')  : 1.7,\n",
+    "    ('seattle',  'topeka')   : 1.8,\n",
+    "    ('san-diego','new-york') : 2.5,\n",
+    "    ('san-diego','chicago')  : 1.8,\n",
+    "    ('san-diego','topeka')   : 1.4,\n",
+    "    }\n",
+    "model.d = Param(model.i, model.j, initialize=dtab, doc='Distance in thousands of miles')\n",
     "#  Scalar f  freight in dollars per case per thousand miles  /90/ ;\n",
-    "\n"
+    "model.f = Param(initialize=90, doc='Freight in dollars per case per thousand miles')"
    ]
   },
   {
@@ -166,13 +181,16 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "#  Parameter c(i,j)  transport cost in thousands of dollars per case ;\n",
     "#            c(i,j) = f * d(i,j) / 1000 ;\n",
-    "\n"
+    "def c_init(model, i, j):\n",
+    "    return model.f * model.d[i,j] / 1000\n",
+    "\n",
+    "model.c = Param(model.i, model.j, initialize=c_init, doc='Transport cost in thousands of dollar per case')"
    ]
   },
   {
@@ -199,7 +217,7 @@
     "#       x(i,j)  shipment quantities in cases\n",
     "#       z       total transportation costs in thousands of dollars ;\n",
     "#  Positive Variable x ;\n",
-    "\n"
+    "model.x = Var(model.i, model.j, bounds=(0.0,None), doc='Shipment quantities in case')"
    ]
   },
   {
@@ -213,18 +231,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "## Define contrains ##\n",
     "# supply(i)   observe supply limit at plant i\n",
     "# supply(i) .. sum (j, x(i,j)) =l= a(i)\n",
+    "def supply_rule(model, i):\n",
+    "    return sum(model.x[i,j] for j in model.j) <= model.a[i]\n",
     "\n",
+    "model.supply = Constraint(model.i, rule=supply_rule, doc='Observe supply limit at plant i')\n",
     "# demand(j)   satisfy demand at market j ;  \n",
-    "# demand(j) .. sum(i, x(i,j)) =g= b(j);\n"
+    "# demand(j) .. sum(i, x(i,j)) =g= b(j);\n",
+    "def demand_rule(model, j):\n",
+    "    return sum(model.x[i,j] for i in model.i) >= model.b[j]\n",
+    "\n",
+    "model.demand = Constraint(model.j, rule=demand_rule, doc='Satisfy demand at market j')"
    ]
   },
   {
@@ -236,12 +261,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def supply_rule(model, i):\n",
+    "    supply = 0.0\n",
+    "    for j in model.j:\n",
+    "        supply += model.x[i,j]\n",
+    "    return supply <= model.a[i]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -272,7 +303,10 @@
     "#  cost ..        z  =e=  sum((i,j), c(i,j)*x(i,j)) ;\n",
     "#  Model transport /all/ ;\n",
     "#  Solve transport using lp minimizing z ;\n",
-    "\n"
+    "def objective_rule(model):\n",
+    "    return sum(model.c[i,j]*model.x[i,j] for i in model.i for j in model.j)\n",
+    "\n",
+    "model.objective = Objective(rule=objective_rule, sense=minimize, doc='Define objective function')"
    ]
   },
   {
@@ -284,12 +318,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def objective_rule(model):\n",
+    "    obj = 0.0  \n",
+    "    for ki in model.i:\n",
+    "        for kj in model.j:\n",
+    "            obj += model.c[ki,kj]*model.x[ki,kj]\n",
+    "    return obj"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -304,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -312,7 +353,8 @@
    "source": [
     "## Display of the output ##\n",
     "# Display x.l, x.m ;\n",
-    "\n"
+    "def pyomo_postprocess(options=None, instance=None, results=None):\n",
+    "    model.x.display()"
    ]
   },
   {
@@ -333,12 +375,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# ==========================================================\n",
+      "# = Solver Results                                         =\n",
+      "# ==========================================================\n",
+      "# ----------------------------------------------------------\n",
+      "#   Problem Information\n",
+      "# ----------------------------------------------------------\n",
+      "Problem: \n",
+      "- Name: unknown\n",
+      "  Lower bound: 153.675\n",
+      "  Upper bound: 153.675\n",
+      "  Number of objectives: 1\n",
+      "  Number of constraints: 6\n",
+      "  Number of variables: 7\n",
+      "  Number of nonzeros: 13\n",
+      "  Sense: minimize\n",
+      "# ----------------------------------------------------------\n",
+      "#   Solver Information\n",
+      "# ----------------------------------------------------------\n",
+      "Solver: \n",
+      "- Status: ok\n",
+      "  Termination condition: optimal\n",
+      "  Statistics: \n",
+      "    Branch and bound: \n",
+      "      Number of bounded subproblems: 0\n",
+      "      Number of created subproblems: 0\n",
+      "  Error rc: 0\n",
+      "  Time: 0.011461734771728516\n",
+      "# ----------------------------------------------------------\n",
+      "#   Solution Information\n",
+      "# ----------------------------------------------------------\n",
+      "Solution: \n",
+      "- number of solutions: 0\n",
+      "  number of solutions displayed: 0\n",
+      "\n",
+      "Displaying Solution\n",
+      "------------------------------------------------------------\n",
+      "x : Shipment quantities in case\n",
+      "    Size=6, Index=x_index, Domain=Reals\n",
+      "    Key                       : Lower : Value : Upper : Fixed : Stale\n",
+      "     ('san-diego', 'chicago') :   0.0 :   0.0 :  None : False : False\n",
+      "    ('san-diego', 'new-york') :   0.0 : 325.0 :  None : False : False\n",
+      "      ('san-diego', 'topeka') :   0.0 : 275.0 :  None : False : False\n",
+      "       ('seattle', 'chicago') :   0.0 : 300.0 :  None : False : False\n",
+      "      ('seattle', 'new-york') :   0.0 :   0.0 :  None : False : False\n",
+      "        ('seattle', 'topeka') :   0.0 :   0.0 :  None : False : False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This emulates what the pyomo command-line tools does\n",
+    "from pyomo.opt import SolverFactory\n",
+    "import pyomo.environ\n",
+    "\n",
+    "opt = SolverFactory(\"glpk\")\n",
+    "results = opt.solve(model)\n",
+    "\n",
+    "# sends results to stdout\n",
+    "results.write()\n",
+    "\n",
+    "print(\"\\nDisplaying Solution\\n\" + '-'*60)\n",
+    "pyomo_postprocess(None, None, results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, if you are very lazy and want to run the script with just `./transport.py` (and you are in Linux) add the following lines at the top: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "#!/usr/bin/env python\n",
+    "# -*- coding: utf-8 -*-"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,12 +477,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/usr/bin/env python\r\n",
+      "# -*- coding: utf-8 -*-\r\n",
+      "\r\n",
+      "# Import\r\n",
+      "from pyomo.environ import *\r\n",
+      "\r\n",
+      "# Creation of a Concrete Model\r\n",
+      "model = ConcreteModel()\r\n",
+      "\r\n",
+      "## Define sets ##\r\n",
+      "#  Sets\r\n",
+      "#       i   canning plants   / seattle, san-diego /\r\n",
+      "#       j   markets          / new-york, chicago, topeka / ;\r\n",
+      "model.i = Set(initialize=['seattle','san-diego'], doc='Canning plans')\r\n",
+      "model.j = Set(initialize=['new-york','chicago', 'topeka'], doc='Markets')\r\n",
+      "\r\n",
+      "## Define parameters ##\r\n",
+      "#   Parameters\r\n",
+      "#       a(i)  capacity of plant i in cases\r\n",
+      "#         /    seattle     350\r\n",
+      "#              san-diego   600  /\r\n",
+      "#       b(j)  demand at market j in cases\r\n",
+      "#         /    new-york    325\r\n",
+      "#              chicago     300\r\n",
+      "#              topeka      275  / ;\r\n",
+      "model.a = Param(model.i, initialize={'seattle':350,'san-diego':600}, doc='Capacity of plant i in cases')\r\n",
+      "model.b = Param(model.j, initialize={'new-york':325,'chicago':300,'topeka':275}, doc='Demand at market j in cases')\r\n",
+      "#  Table d(i,j)  distance in thousands of miles\r\n",
+      "#                    new-york       chicago      topeka\r\n",
+      "#      seattle          2.5           1.7          1.8\r\n",
+      "#      san-diego        2.5           1.8          1.4  ;\r\n",
+      "dtab = {\r\n",
+      "    ('seattle',  'new-york') : 2.5,\r\n",
+      "    ('seattle',  'chicago')  : 1.7,\r\n",
+      "    ('seattle',  'topeka')   : 1.8,\r\n",
+      "    ('san-diego','new-york') : 2.5,\r\n",
+      "    ('san-diego','chicago')  : 1.8,\r\n",
+      "    ('san-diego','topeka')   : 1.4,\r\n",
+      "}\r\n",
+      "model.d = Param(model.i, model.j, initialize=dtab, doc='Distance in thousands of miles')\r\n",
+      "#  Scalar f  freight in dollars per case per thousand miles  /90/ ;\r\n",
+      "model.f = Param(initialize=90, doc='Freight in dollars per case per thousand miles')\r\n",
+      "#  Parameter c(i,j)  transport cost in thousands of dollars per case ;\r\n",
+      "#            c(i,j) = f * d(i,j) / 1000 ;\r\n",
+      "def c_init(model, i, j):\r\n",
+      "    return model.f * model.d[i,j] / 1000\r\n",
+      "model.c = Param(model.i, model.j, initialize=c_init, doc='Transport cost in thousands of dollar per case')\r\n",
+      "\r\n",
+      "## Define variables ##\r\n",
+      "#  Variables\r\n",
+      "#       x(i,j)  shipment quantities in cases\r\n",
+      "#       z       total transportation costs in thousands of dollars ;\r\n",
+      "#  Positive Variable x ;\r\n",
+      "model.x = Var(model.i, model.j, bounds=(0.0,None), doc='Shipment quantities in case')\r\n",
+      "\r\n",
+      "## Define contrains ##\r\n",
+      "# supply(i)   observe supply limit at plant i\r\n",
+      "# supply(i) .. sum (j, x(i,j)) =l= a(i)\r\n",
+      "def supply_rule(model, i):\r\n",
+      "    return sum(model.x[i,j] for j in model.j) <= model.a[i]\r\n",
+      "model.supply = Constraint(model.i, rule=supply_rule, doc='Observe supply limit at plant i')\r\n",
+      "# demand(j)   satisfy demand at market j ;  \r\n",
+      "# demand(j) .. sum(i, x(i,j)) =g= b(j);\r\n",
+      "def demand_rule(model, j):\r\n",
+      "    return sum(model.x[i,j] for i in model.i) >= model.b[j]  \r\n",
+      "model.demand = Constraint(model.j, rule=demand_rule, doc='Satisfy demand at market j')\r\n",
+      "\r\n",
+      "## Define Objective and solve ##\r\n",
+      "#  cost        define objective function\r\n",
+      "#  cost ..        z  =e=  sum((i,j), c(i,j)*x(i,j)) ;\r\n",
+      "#  Model transport /all/ ;\r\n",
+      "#  Solve transport using lp minimizing z ;\r\n",
+      "def objective_rule(model):\r\n",
+      "    return sum(model.c[i,j]*model.x[i,j] for i in model.i for j in model.j)\r\n",
+      "model.objective = Objective(rule=objective_rule, sense=minimize, doc='Define objective function')\r\n",
+      "\r\n",
+      "\r\n",
+      "## Display of the output ##\r\n",
+      "# Display x.l, x.m ;\r\n",
+      "def pyomo_postprocess(options=None, instance=None, results=None):\r\n",
+      "    model.x.display()\r\n",
+      "\r\n",
+      "# This is an optional code path that allows the script to be run outside of\r\n",
+      "# pyomo command-line.  For example:  python transport.py\r\n",
+      "if __name__ == '__main__':\r\n",
+      "    # This emulates what the pyomo command-line tools does\r\n",
+      "    from pyomo.opt import SolverFactory\r\n",
+      "    import pyomo.environ\r\n",
+      "    opt = SolverFactory(\"glpk\")\r\n",
+      "    results = opt.solve(model)\r\n",
+      "    #sends results to stdout\r\n",
+      "    results.write()\r\n",
+      "    print(\"\\nDisplaying Solution\\n\" + '-'*60)\r\n",
+      "    pyomo_postprocess(None, None, results)\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!cat transport.py"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -368,11 +598,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0.00] Setting up Pyomo environment\n",
+      "[    0.00] Applying Pyomo preprocessing actions\n",
+      "[    0.00] Creating model\n",
+      "[    0.00] Applying solver\n",
+      "[    0.02] Processing results\n",
+      "    Number of solutions: 1\n",
+      "    Solution Information\n",
+      "      Gap: 0.0\n",
+      "      Status: feasible\n",
+      "      Function Value: 153.67499999999998\n",
+      "    Solver results file: results.json\n",
+      "[    0.02] Applying Pyomo postprocessing actions\n",
+      "x : Shipment quantities in case\n",
+      "    Size=6, Index=x_index, Domain=Reals\n",
+      "    Key                       : Lower : Value : Upper : Fixed : Stale\n",
+      "     ('san-diego', 'chicago') :   0.0 :   0.0 :  None : False : False\n",
+      "    ('san-diego', 'new-york') :   0.0 : 325.0 :  None : False : False\n",
+      "      ('san-diego', 'topeka') :   0.0 : 275.0 :  None : False : False\n",
+      "       ('seattle', 'chicago') :   0.0 : 300.0 :  None : False : False\n",
+      "      ('seattle', 'new-york') :   0.0 :   0.0 :  None : False : False\n",
+      "        ('seattle', 'topeka') :   0.0 :   0.0 :  None : False : False\n",
+      "[    0.02] Pyomo Finished\n"
+     ]
+    }
+   ],
    "source": [
     "!pyomo solve --solver=glpk transport.py"
    ]
@@ -386,12 +645,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\r\n",
+      "    \"Problem\": [\r\n",
+      "        {\r\n",
+      "            \"Lower bound\": 153.675,\r\n",
+      "            \"Name\": \"unknown\",\r\n",
+      "            \"Number of constraints\": 6,\r\n",
+      "            \"Number of nonzeros\": 13,\r\n",
+      "            \"Number of objectives\": 1,\r\n",
+      "            \"Number of variables\": 7,\r\n",
+      "            \"Sense\": \"minimize\",\r\n",
+      "            \"Upper bound\": 153.675\r\n",
+      "        }\r\n",
+      "    ],\r\n",
+      "    \"Solution\": [\r\n",
+      "        {\r\n",
+      "            \"number of solutions\": 1,\r\n",
+      "            \"number of solutions displayed\": 1\r\n",
+      "        },\r\n",
+      "        {\r\n",
+      "            \"Constraint\": \"No values\",\r\n",
+      "            \"Gap\": 0.0,\r\n",
+      "            \"Message\": null,\r\n",
+      "            \"Objective\": {\r\n",
+      "                \"objective\": {\r\n",
+      "                    \"Value\": 153.67499999999998\r\n",
+      "                }\r\n",
+      "            },\r\n",
+      "            \"Problem\": {},\r\n",
+      "            \"Status\": \"feasible\",\r\n",
+      "            \"Variable\": {\r\n",
+      "                \"x[san-diego,new-york]\": {\r\n",
+      "                    \"Value\": 325.0\r\n",
+      "                },\r\n",
+      "                \"x[san-diego,topeka]\": {\r\n",
+      "                    \"Value\": 275.0\r\n",
+      "                },\r\n",
+      "                \"x[seattle,chicago]\": {\r\n",
+      "                    \"Value\": 300.0\r\n",
+      "                }\r\n",
+      "            }\r\n",
+      "        }\r\n",
+      "    ],\r\n",
+      "    \"Solver\": [\r\n",
+      "        {\r\n",
+      "            \"Error rc\": 0,\r\n",
+      "            \"Statistics\": {\r\n",
+      "                \"Branch and bound\": {\r\n",
+      "                    \"Number of bounded subproblems\": 0,\r\n",
+      "                    \"Number of created subproblems\": 0\r\n",
+      "                }\r\n",
+      "            },\r\n",
+      "            \"Status\": \"ok\",\r\n",
+      "            \"Termination condition\": \"optimal\",\r\n",
+      "            \"Time\": 0.004419803619384766\r\n",
+      "        }\r\n",
+      "    ]\r\n",
+      "}"
+     ]
+    }
+   ],
+   "source": [
+    "!cat results.json"
+   ]
   },
   {
    "cell_type": "markdown",
